Spacing fix for the Teams page

--- a/Content/Custom.css
+++ b/Content/Custom.css
@@ -94,7 +94,7 @@ body {
   font-weight: bold;
   list-style: none;
   margin: 13px 0 0 0;
-  margin-bottom: 20px;
+  margin-bottom: 13px;
   padding: 0;
   width: 30%;
 }
